--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "license": "MIT",
     "dependencies": {
         "@eslint/eslintrc": "^3.1.0",
+        "@typegoose/typegoose": "^12.7.0",
         "@typescript-eslint/eslint-plugin": "^8.5.0",
         "@typescript-eslint/parser": "^8.5.0",
         "graphql": "^16.9.0",
+        "mongoose": "^8.6.2",
         "prettier-plugin-organize-imports": "^4.0.0",
         "ts-node": "^10.9.2"
     },
@@ -27,6 +29,7 @@
         "globals": "^15.9.0",
         "nodemon": "^3.1.4",
         "prettier": "3.3.3",
+        "tsconfig-paths": "^4.2.0",
         "typescript": "^5.6.2",
         "typescript-eslint": "^8.5.0"
     }
