--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,18 +13,30 @@
         /* Enable all strict type-checking options. */
         "skipLibCheck" : true,
         /* Skip type checking all .d.ts files. */
-
+        "resolveJsonModule" : true,
         "experimentalDecorators" : true,
         "emitDecoratorMetadata" : true,
         "strictPropertyInitialization" : false,
         "baseUrl" : "./src/",
-        "paths": {
-            "@mocks/*": ["./mocks/*"],
-            "@services/*": ["./services/*"],
-            "@utils/*": ["./utils/*"],
-            "@schemas/*": ["./schemas/*"],
-            "@models/*": ["./models/*"],
-            "@controllers/*": ["./controllers/*"],
+        "paths" : {
+            "@mocks/*" : [
+                "./mocks/*"
+            ],
+            "@services/*" : [
+                "./services/*"
+            ],
+            "@utils/*" : [
+                "./utils/*"
+            ],
+            "@schemas/*" : [
+                "./schemas/*"
+            ],
+            "@models/*" : [
+                "./models/*"
+            ],
+            "@controllers/*" : [
+                "./controllers/*"
+            ]
         }
-    },
+    }
 }
