feat: add GraphQL Apollo server and basic queries for fetching data using DataLoaders

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,10 @@
             ],
             "@controllers/*" : [
                 "./controllers/*"
-            ]
+            ],
+            "@graphql/*" : [
+                "./graphql/*"
+            ],
         }
     }
 }
