--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,11 @@
 {
-    "trailingComma": "es5",
-    "tabWidth": 4,
-    "semi": false,
-    "singleQuote": true,
-    "printWidth": 120,
-    "plugins": ["prettier-plugin-organize-imports"],
-    "pluginSearchDirs": false,
+    "trailingComma" : "es5",
+    "tabWidth" : 4,
+    "semi" : false,
+    "singleQuote" : true,
+    "printWidth" : 120,
+    "plugins" : [
+        "prettier-plugin-organize-imports"
+    ],
+    "pluginSearchDirs" : false
 }
