--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "esModuleInterop": true,
     "scripts": {
         "test": "test",
-        "start": "node src/index.ts",
+        "start": "ts-node src/index.ts",
         "dev": "nodemon src/index.ts",
         "pretty": "prettier --write .",
         "lint": "eslint . --fix"
@@ -26,8 +26,7 @@
         "graphql": "^16.9.0",
         "graphql-tools": "^9.0.1",
         "mongoose": "^8.6.2",
-        "prettier-plugin-organize-imports": "^4.0.0",
-        "ts-node": "^10.9.2"
+        "prettier-plugin-organize-imports": "^4.0.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.10.0",
@@ -37,6 +36,7 @@
         "lodash": "^4.17.21",
         "nodemon": "^3.1.4",
         "prettier": "3.3.3",
+        "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
         "typescript": "^5.6.2",
         "typescript-eslint": "^8.5.0"
