--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 MONGO_URL=
+SERVER_HOST=
 SERVER_PORT=
 HYDRATION_TYPE= # 'TEST' OR 'DEVELOPMENT' OR 'PRODUCTION'
 NODE_ENV= # 'test' OR 'development' OR 'production'. if set to 'test' or 'development', then GraphQL will omit stacktrace in error response
